scss/component/_animation.scss
.fade {
    opacity: 0;
    @include transition(opacity .15s linear);

    &.in {
        opacity: 1;
    }
}

.collapse {
    display: none;

    &.in {
        display: block;
    }
    // tr&.in    { display: table-row; }
    // tbody&.in { display: table-row-group; }
}

.collapsing {
    position: relative;
    height: 0;
    overflow: hidden;

    @if $enable-transitions {
        transition-timing-function: ease;
        transition-duration: .35s;
        transition-property: height;
    }

    // Horizontal collapse variant
    &.width {
        width: 0;
        height: auto;

        @if $enable-transitions {
            transition-property: width;
        }
    }
}

